profilelist1exp/unpackaged/objects/Course__c.object
<CustomObject>
    <description>Course will be master object that contains all the course details.
Tick Allow Reports, Allow Activities, Track Field History</description>
    <fields>
        <fullName>Course_Code__c</fullName>
        <formula>IF(FIND(&apos;-&apos;, Course_Name__c )=0, &apos;INVALID CODE&apos;, TRIM(LEFT(Course_Name__c, FIND(&apos;-&apos;, Course_Name__c)-1 ) ))</formula>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <label>Course Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course_Id__c</fullName>
        <externalId>true</externalId>
        <label>Course Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Course_Modality__c</fullName>
        <label>Course Modality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Hours__c</fullName>
        <label>Credit Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course_Name__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Course_Modality__c</columns>
        <columns>Course_Type__c</columns>
        <columns>Credit_Hours__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NE-{00000000}</displayFormat>
        <label>Course Name Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>